--- a/config.json
+++ b/config.json
@@ -5,6 +5,6 @@
   "alert_threshold": 30,
   "threshold": 10,
   "frames_required": 18,
-  "api_host": "localhost",
+  "api_url": "http://localhost",
   "api_port": 8000
 }
