--- a/config.json
+++ b/config.json
@@ -6,5 +6,6 @@
   "threshold": 10,
   "frames_required": 18,
   "api_url": "http://localhost",
-  "api_port": 8000
+  "api_port": 8000,
+  "working_hours": [20, 8]
 }
